2006-04-22  Hynek Hanke  <hanke@chopin>

	* config/modules/espeak-generic.conf: eSpeak generic output module configuration.

	* config/speechd.conf.in: Added espeak-generic conf module (commented out).

	* src/server/speaking.c (speak): Break loop when SPEAKING only after checking for pause. Do not fill resume_requested with 1.

	* src/server/set.c (default_fd_set): Initialize paused_while_speaking to 0.

	* src/server/server.c (queue_message): Only copy settings and
	type when we get an fd. For uids, the message settings are
	already filled in.


2006-04-21  Gary Cramblitt <garycramblitt@comcast.net>

	* config/modules/ibmtts.conf:
	* src/modules/ibmtts.c: Permit per-language key substitution.

	* doc/ssip.texi: Clarify KEY allowed characters.

2006-04-16  Gary Cramblitt <garycramblitt@comcast.net>

	* doc/ssip.texi: Clarify module_pause(), module_stop(), and module_report_*.

	* src/modules/ibmtts.c: Rework stop and pause logic.  You cannot call
	module_report_* from within a modules_stop() or module_pause call.

	* src/tests/stop_and_pause.test: Minor changes.

2006-04-12  Gary Cramblitt <garycramblitt@comcast.net>

	* src/modules/ibmtts.c:
	* config/modules/ibmtts.conf: Key substitution for IBM TTS.

	* src/tests/keys.test: Test script for keys.

2006-04-11  Gary Cramblitt <garycramblitt@comcast.net>

	* src/tests/run_test.c: Add "wait for <str>" operator.  Useful for waiting
	for event notifications.

	* src/tests/README: Document "wait for".

	* src/tests/stop_and_pause.test: Use "wait for".

	* doc/ssip.texi: Minor correction for CANCEL notification.

2006-04-10  Gary Cramblitt <garycramblitt@comcast.net>

	* src/c/clients/say/say.c, options.h, options.c:
	* doc/spd-say.texi: Add --ssml (-x) option for speaking SSML text.

	* config/modules/ibmtts.conf:
	* config/speechd.conf.in:
	* src/modules/ibmtts.c, Makefile.am: 
	* src/configure.in.in: New output module for IBM TTS synthesizer.
	It compiles and even speaks, but don't expect much else right now.
