@@ -54,6 +54,18 @@ IbmttsAudioOutputMethod "alsa"
 
 #IbmttsAudioChunkSize 20000
 
+# -- SOUND ICONS --
+
+# IBM TTS Synthesizer does not currently support sound icons
+# (audio files that are played by name when an application requests
+# a sound icon).  If you have installed the free(b)soft sound-icons
+# package, this is the directory where will they be found.  If not
+# blank, the IBM TTS Output Module will play them if it finds a
+# file whose name matches the sound icon name.  If blank, or no
+# matching file is found, the name of the sound icon will be spoken.
+
+#IbmttsSoundIconFolder "/usr/share/sounds/sound-icons/"
+
 # -- DEBUG --
 
 # Debug turns debugging on or off
